--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 
 header{
     grid-area: header;
+    margin: auto;
 }
 
 nav{
@@ -26,8 +27,10 @@ nav>ul{
 }
 
 nav li{
-    height: 100%;
+    height: 40%;
     list-style-type: none;
+    border: solid;
+    margin: 20px auto;
 }
 
 nav a{
@@ -35,12 +38,20 @@ nav a{
     width: 100%;
     display: inline-block;
     text-decoration: none;
+    text-align: center;
+    margin-top: 2%;
+    font-size: 3vh;
 }
 
 main{
     grid-area: main;
     display: grid;
     grid-template-rows: auto;
+}
+
+main section p{
+    margin: 5%;
+    
 }
 
 footer{
@@ -73,7 +84,7 @@ main img{
 
     main img{
         display: block;
-        width: 75%;
+        width: 60%;
         margin: auto;
     }
 
